新增设计模式: 代理模式 命令模式 迭代器模式 中介者模式 观察者模式 原型模式