@@ -80,3 +80,16 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+//enable preview features
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
